--- a/from_scratch/tf/cnns/deep_dream.ipynb
+++ b/from_scratch/tf/cnns/deep_dream.ipynb
@@ -1351,6 +1351,18 @@
    "display_name": "Python 3.7 (tensorflow-legacy)",
    "language": "python",
    "name": "tensorflow-legacy"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
